--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,7 @@
   width: 100%;
   padding-left: 2em;
   padding-right: 2em;
+  z-index: 1;
 }
 
 #nav-bar .logo {
